--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+*.iml
+*.iws
+*.ipr
+.idea/
+.gradle/
+local.properties
+
+*/build/
+
+*~
+*.swp
+
 .DS_Store
-/build
