--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,29 @@ android {
 }
 
 dependencies {
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+
+    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:cardview-v7:21.0.0'
+    compile 'com.android.support:gridlayout-v7:21.0.0'
+    compile 'com.android.support:mediarouter-v7:21.0.0'
+    compile 'com.android.support:palette-v7:21.0.0'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'com.android.support:support-annotations:21.0.0'
+    compile 'com.android.support:support-v13:21.0.0'
+
+    compile 'com.jakewharton:butterknife:6.0.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.squareup.retrofit:retrofit:1.6.1'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.squareup.okio:okio:1.0.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    compile 'com.squareup.picasso:picasso:2.4.0'
+
+    compile 'com.jakewharton.timber:timber:2.5.0'
+
 }
