--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "antresol.it.antresol"
-        minSdkVersion 9
+        applicationId "it.antresol"
+        minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
