--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="antresol.it.antresol">
+    package="it.antresol">
 
     <application
         android:name=".AntresolApplication"
@@ -17,6 +17,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".model.database.AntresolContentProvider"
+            android:authorities="it.antresol.contentprovider" >
+        </provider>
     </application>
 
 </manifest>
