--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="it.antresol">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".AntresolApplication"
         android:allowBackup="true"
@@ -18,10 +21,10 @@
             </intent-filter>
         </activity>
 
+
         <provider
             android:name=".model.database.AntresolContentProvider"
-            android:authorities="it.antresol.contentprovider" >
-        </provider>
+            android:authorities="it.antresol.contentprovider"></provider>
     </application>
 
 </manifest>
