--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
 
     compile 'com.jakewharton.timber:timber:2.5.0'
+    compile 'com.melnykov:floatingactionbutton:1.2.0'
 
 }
