--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:name=".AntresolApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:hardwareAccelerated="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
