--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
     <application
         android:name=".AntresolApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
         android:hardwareAccelerated="true"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
@@ -24,6 +24,13 @@
         </activity>
 
 
+        <activity
+            android:name=".ui.ads.AdPageActivity"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
+            android:name=".ui.users.UserLoginActivity"
+            android:screenOrientation="portrait"></activity>
         <!--
         <provider
             android:name=".model.database.AntresolContentProvider"
