--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <application
         android:name=".AntresolApplication"
         android:allowBackup="true"
@@ -26,6 +30,10 @@
 
         <activity
             android:name=".ui.ads.AdPageActivity"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
+            android:name=".ui.ads.CreateAdActivity"
             android:screenOrientation="portrait"></activity>
 
         <activity
