--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.jakewharton.timber:timber:2.5.0'
     compile 'com.melnykov:floatingactionbutton:1.2.0'
 
+    compile 'de.hdodenhof:circleimageview:1.2.2'
 }
