--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,14 +20,13 @@
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
 
         <activity
             android:name=".ui.SplashScreenActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,6 +49,15 @@
 
         <activity
             android:name=".ui.users.UserProfileActivity"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
+            android:name=".ui.users.my.MyUserProfileActivity"
+            android:screenOrientation="portrait"></activity>
+
+
+        <activity
+            android:name=".ui.users.my.MyUserNewsActivity"
             android:screenOrientation="portrait"></activity>
 
         <!--
