--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     compile 'com.melnykov:floatingactionbutton:1.2.0'
 
     compile 'de.hdodenhof:circleimageview:1.2.2'
+
+    compile 'com.facebook.android:facebook-android-sdk:3.23.+'
 }
