--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,6 @@
 
         <activity
             android:name=".ui.ads.AdPageActivity"
-
             android:screenOrientation="portrait"></activity>
 
         <activity
@@ -51,9 +50,14 @@
             android:screenOrientation="portrait"></activity>
 
         <activity
-            android:name=".ui.users.my.MyUserActivity"
+            android:name=".ui.users.my.MyUserLoginActivity"
+            android:label="@string/login"
             android:screenOrientation="portrait"></activity>
 
+        <activity
+            android:name=".ui.users.my.MyUserProfileActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"></activity>
 
         <activity
             android:name=".ui.users.my.MyUserNewsActivity"
@@ -63,6 +67,7 @@
         <activity
             android:name="com.facebook.LoginActivity"
             android:label="@string/app_name"
+            android:noHistory="true"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <meta-data
